@@ -2,6 +2,7 @@ Development Version
 ===================
 
 * Use system fonts when possible.
+* Change shortcuts for changing tabs to Alt+NUMBER (instead of Control+NUMBER).
 
 
 Version 0.4.1 (2015-04-30)
